Improved UI, fix k8s deployment, added CI scripts

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: capsule-dashboard
     spec:
+      serviceAccountName: capsule-dashboard
       containers:
       - name: capsule-dashboard
         imagePullPolicy: Always
