--- a/k8s/service-account.yaml
+++ b/k8s/service-account.yaml
@@ -2,24 +2,16 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: capsule-dashboard
+  namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   name: capsule-dashboard-role
 rules:
-  - apiGroups: [""]
-    resources: ["secrets", "pods", "pods/log", "configmaps", "persistentvolumeclaims", "services"]
-    verbs: ["get", "watch", "update", "patch", "delete", "create", "list"]
-  - apiGroups: ["batch", "extensions"]
-    resources: ["jobs"]
-    verbs: ["get", "watch", "update", "patch", "delete", "create"]
   - apiGroups: ["capsule.clastix.io"]
-    resources:
-      [
-        "tenants", "tenants/status", "tenants/finalizers",
-      ]
-    verbs: ["get", "watch", "update", "patch", "delete", "create"]
+    resources: ["tenants", "tenants/status", "tenants/finalizers"]
+    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -28,7 +20,8 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: capsule-dashboard
+    namespace: default
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: capsule-dashboard-role
   apiGroup: rbac.authorization.k8s.io
