--- a/k8s/service-account.yaml
+++ b/k8s/service-account.yaml
@@ -14,7 +14,7 @@ rules:
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: capsule-dashboard-binding
 subjects:
