--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "my-app",
-	"version": "0.0.1",
+	"name": "capsule-dashboard",
+	"version": "0.0.2",
 	"scripts": {
 		"dev": "vite dev --host 0.0.0.0",
 		"build": "vite build",
